@@ -4,8 +4,9 @@ lilv (0.24.5) unstable;
   * Fix creating directories across drives on Windows
   * Don't print errors when saving state if correct links already exist
   * Fix issues with loading state with saved files from the model
+  * Add option to override LV2_PATH in applications
 
- -- David Robillard <d@drobilla.net>  Sun, 16 Sep 2018 11:36:45 +0200
+ -- David Robillard <d@drobilla.net>  Sun, 14 Apr 2019 09:52:48 +0200
 
 lilv (0.24.4) stable;
 
